# aurora

auroraos/: .gitignore  LICENSE  README.md
auroraos/backend/: .env.example  pyproject.toml
auroraos/backend/app/: __init__.py  config.py  db.py  deps.py  main.py  models.py  schemas.py
auroraos/backend/app/orchestrator/: models.py  router.py  schemas.py
auroraos/backend/app/orchestrator/services/: agent.py  outbound.py  routing.py  routing_decision.py  telegram_bridge.py  user_mapping.py
auroraos/backend/app/routers/: ai.py  analytics.py  content.py  day.py  dm.py
auroraos/backend/app/state/: models.py  router.py  schemas.py
auroraos/backend/app/telegram_worker/: worker.py
auroraos/bot/: .env.example  main.py  pyproject.toml
auroraos/frontend/: index.html  vite.config.ts
auroraos/frontend/public/: manifest.json  offline.html  sw.js
auroraos/frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
auroraos/frontend/src/brand/: Logo.tsx  colors.ts  index.ts  typography.ts
auroraos/frontend/src/components/: AnalyticsCard.tsx  PendingList.tsx  SplashScreen.tsx  TimelineTab.tsx  VibeBar.tsx  VibeDashboard.tsx
auroraos/frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  index.ts
auroraos/frontend/src/features/operator-console/: OperatorConsole.tsx  api.ts  index.ts  types.ts
auroraos/frontend/src/features/operator-console/components/: ChatView.tsx  (+2 more)
auroraos/frontend/src/features/state-dashboard/: StateDashboard.tsx  api.ts  index.ts
auroraos/frontend/src/hooks/: useAuroraAPI.ts
auroraos/scripts/: aurora_feedback_export.py
